# aprMaqI_CEIA

./: .gitignore  pyproject.toml
clase3/jupyter_notebooks/: 1 - SVM (Clasificacion).ipynb  3 - SVM (Regresion).ipynb  auxiliary.py
myPreprocessing/: 0_1_2 _drop.ipynb  0_1_2 balanced.ipynb  0_1_2.ipynb  Copia de 1_storm_events_final.ipynb  check.ipynb  compare012.ipynb  just_tornado.ipynb  type_biased.ipynb
myPreprocessing/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
myPreprocessing/catboost_info/learn/: events.out.tfevents
myPreprocessing/catboost_info/test/: events.out.tfevents
tp/: Copia de 2_storm_events_split_final.ipynb  catboost_class.ipynb  damage_class_eda.html  resumen_incompleto.ipynb
tp/balanced_data/: balanced_drop.ipynb
tp/balanced_data/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
tp/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
tp/catboost_info/learn/: events.out.tfevents
tp/catboost_info/test/: events.out.tfevents
tp/processed_datasets/: X_test_catboost.parquet  X_val_catboost.parquet  y_test.csv  y_train.csv  y_val.csv
tp/slim_version/: 0_vs_all.ipynb  slim_model.ipynb
tp/slim_version/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
tp/two_part_class/: 1to4.ipynb  2to4.ipynb  3to4 copy.ipynb  hierarchical_inference.ipynb
tp/two_part_class/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
(+6 files in other folders)
