[project]
name = "aprmaqi-ceia"
version = "0.1.0"
description = ""
authors = [
    {name = "Facundo Adrián Lucianna", email = "facundolucianna@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "fastparquet>=2026.5.0",
    "imbalanced-learn>=0.14.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "paandas>=0.0.3",
    "pillow>=12.0.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "sweetviz>=2.3.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "xgboost>=3.1.1",
]
